[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aisc_db"
authors = [{name = "Mitchell Albert", email = "mitchell.albert@wsp.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "sectionproperties",
    "pandas",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Home = "https://github.com/MitchellAlbert/aisc_db"
